<resources>
    <string name="app_name">monCovid</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="province_data">Province Data</string>
    <string name="covid_19_data_per_province">COVID-19 Data per-Province in Indonesia</string>
    <string name="see_more">See more</string>
    <string name="daily_update">Daily Update</string>
    <string name="separator_colon">:</string>
    <string name="confirmed_with_colon">Confirmed : </string>
    <string name="recovered_with_colon">Recovered : </string>
    <string name="deaths_with_colon">Deaths : </string>
    <string name="new_cases_with_colon">New Cases :</string>
    <string name="all_values_are_total_number">All values are total number</string>
    <string name="overview">Overview</string>
    <string name="province">Province</string>
    <string name="warning_internet_unavailable">Internet is unavailable !</string>
</resources>
