<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.homindolentrahar.moncovid.data.pojo.CovidProvinceResult" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_item_province"
        style="@style/CardItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quarter_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapper_item_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_item_province_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/province_data"
                    android:src="@drawable/ic_location_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_item_province_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/wrapper_item_province_location_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_province"
                    style="@style/ItemProvinceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.provinsi}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="DKI Jakarta" />

                <TextView
                    android:id="@+id/text_confirmed"
                    style="@style/ItemProvinceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_margin"
                    android:text="@string/confirmed_with_colon"
                    android:textColor="@color/confirmed"
                    app:layout_constraintStart_toStartOf="@id/tv_province"
                    app:layout_constraintTop_toBottomOf="@id/tv_province" />

                <TextView
                    android:id="@+id/tv_confirmed"
                    style="@style/ItemProvinceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/quarter_margin"
                    android:text="@{String.valueOf(item.positif)}"
                    android:textColor="@color/confirmed"
                    app:layout_constraintBottom_toBottomOf="@id/text_confirmed"
                    app:layout_constraintStart_toEndOf="@id/text_confirmed"
                    app:layout_constraintTop_toTopOf="@id/text_confirmed"
                    tools:text="5672" />

                <TextView
                    android:id="@+id/text_recovered"
                    style="@style/ItemProvinceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_with_colon"
                    android:textColor="@color/recovered"
                    app:layout_constraintStart_toStartOf="@id/text_confirmed"
                    app:layout_constraintTop_toBottomOf="@id/text_confirmed" />

                <TextView
                    android:id="@+id/tv_recovered"
                    style="@style/ItemProvinceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.sembuh)}"
                    android:textColor="@color/recovered"
                    app:layout_constraintBottom_toBottomOf="@id/text_recovered"
                    app:layout_constraintStart_toStartOf="@id/tv_confirmed"
                    app:layout_constraintTop_toTopOf="@id/text_recovered"
                    tools:text="653" />

                <TextView
                    android:id="@+id/text_deaths"
                    style="@style/ItemProvinceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths_with_colon"
                    android:textColor="@color/deaths"
                    app:layout_constraintStart_toStartOf="@id/text_recovered"
                    app:layout_constraintTop_toBottomOf="@id/text_recovered" />

                <TextView
                    android:id="@+id/tv_deaths"
                    style="@style/ItemProvinceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.meninggal)}"
                    android:textColor="@color/deaths"
                    app:layout_constraintBottom_toBottomOf="@id/text_deaths"
                    app:layout_constraintStart_toStartOf="@id/tv_recovered"
                    app:layout_constraintTop_toTopOf="@id/text_deaths"
                    tools:text="489" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>